# reports-det

./: app.py  main.py  pyproject.toml
data/: .cefr_checkpoint.json  FLS Mentor Feedback Details -PILOT-Foreverlearning.xlsx  det.csv  mentor_feedback.json  monthly_cefr.csv  monthly_cefr_ai.csv  prompt.md  student_effort.csv  weekly_cefr.csv  weekly_transcripts.csv
scripts/: generate_cefr.py  generate_monthly_cefr.py  prepare_data.py
